// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontVariantLigatures renders 0 1`] = `
Array [
  .c0 {
  font-variant-ligatures: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders function 1`] = `
Array [
  .c0 {
  font-variant-ligatures: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders invalid theme path 1`] = `
Array [
  .c0 {
  font-variant-ligatures: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders negative number 1`] = `
Array [
  .c0 {
  font-variant-ligatures: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-variant-ligatures: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-ligatures: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-ligatures: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-ligatures: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-ligatures: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-ligatures: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-variant-ligatures: July;
}

@media May {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: September;
  }
}

@media January {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media June {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: July;
}

@media May {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: September;
  }
}

@media January {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media June {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: January;
  }
}

@media January {
  .c0 {
    font-variant-ligatures: December;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: April;
  }
}

@media June {
  .c0 {
    font-variant-ligatures: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: January;
  }
}

@media January {
  .c0 {
    font-variant-ligatures: December;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: April;
  }
}

@media June {
  .c0 {
    font-variant-ligatures: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-variant-ligatures: July;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media January {
  .c0 {
    font-variant-ligatures: September;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media June {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-variant-ligatures: July;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media January {
  .c0 {
    font-variant-ligatures: September;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: November;
  }
}

@media June {
  .c0 {
    font-variant-ligatures: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-ligatures: January;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: December;
  }
}

@media January {
  .c0 {
    font-variant-ligatures: April;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: May;
  }
}

@media June {
  .c0 {
    font-variant-ligatures: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-ligatures: January;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: December;
  }
}

@media January {
  .c0 {
    font-variant-ligatures: April;
  }
}

@media April {
  .c0 {
    font-variant-ligatures: May;
  }
}

@media June {
  .c0 {
    font-variant-ligatures: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders postitive number 1`] = `
Array [
  .c0 {
  font-variant-ligatures: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders string 1`] = `
Array [
  .c0 {
  font-variant-ligatures: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantLigatures renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontVariantLigatures renders valid theme path 1`] = `
Array [
  .c0 {
  font-variant-ligatures: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-ligatures: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
